[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["Gabriele Catania <gabriele.ctn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = {extras = ["d"], version = "^21.5b1"}
isort = "^5.8.0"
flake8 = "^3.9.2"
pre-commit = "^2.12.1"
mypy = "^0.812"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
